--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.3"
+  },
+  "devDependencies": {
+    "minimist": ">=1.2.3"
   }
 }
